CLIM-329 adjustements to comments and hash calculation

--- a/tools/encoder.html
+++ b/tools/encoder.html
@@ -10,6 +10,7 @@
         URL <input type="url" id="url" size="100"><br>
         Salt <input type="text" id="salt" value="override-me"><br>
         <button>Encode</button><br>
+        Encoded hash <input type="text" id="hash" size="20">
         Result <input type="text" id="result" size="100">
 </body>
 </body>
